force-app/main/default/objects/ilms__User_Chapter__c/ilms__User_Chapter__c.object-meta.xml
<CustomObject>
    <label>User Chapter</label>
    <nameField>
        <displayFormat>UC{00000}</displayFormat>
        <label>User Chapter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Chapters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>