force-app/main/default/objects/ilms__User_Chapter__c/fields/ilms__Chapter__c.field-meta.xml
<CustomField>
    <fullName>ilms__Chapter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Chapter</label>
    <referenceTo>ilms__Chapter__c</referenceTo>
    <relationshipLabel>Chapter</relationshipLabel>
    <relationshipName>Chapter</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>