force-app/main/default/objects/ilms__User_Chapter__c/fields/ilms__Chapter_Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Chapter_Name__c</fullName>
    <formula>ilms__Chapter__r.ilms__Chapter_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chapter Name</label>
    <type>Text</type>
</CustomField>