force-app/main/default/objects/ilms__User_Chapter__c/fields/ilms__User_Book__c.field-meta.xml
<CustomField>
    <fullName>ilms__User_Book__c</fullName>
    <label>User Book</label>
    <referenceTo>ilms__User_Book__c</referenceTo>
    <relationshipLabel>User Chapters</relationshipLabel>
    <relationshipName>User_Chapters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>